- Change server port number to 8082

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ server.tomcat.accesslog.enabled=true
 server.tomcat.uri-encoding=UTF-8
 
 spring.datasource.connection-properties=useUnicode=true;characterEncoding=utf-8;
+
+server.port=8082
