--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,5 @@ server.tomcat.uri-encoding=UTF-8
 
 spring.datasource.connection-properties=useUnicode=true;characterEncoding=utf-8;
 
+#server.address=172.31.40.215
 server.port=8082
